[tool.poetry]
name = "haw"
version = "0.1.0"
description = "快速构建Flask RESTful API Web 应用服务"
license = "MIT"

authors = ["studyxiao <studyxiao@163.com>"]
readme = "README.md"

homepage = "https://studyxiao.cn"
repository = "https://gitlab.studyxiao.cn/studyxiao/xiao"

keywords = ['Flask', 'RESTful API', 'Celery', 'Redis']

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
python-dotenv = "^0.13.0"
flask-sqlalchemy = "^2.4.3"
flask-migrate = "^2.5.3"
flask-wtf = "^0.14.3"
pillow = "^7.1.2"
redis = "^3.5.3"
celery = "^4.4.5"
flask-mail = "^0.9.1"
flask-cors = "^3.0.8"
flask-jwt-extended = "^3.24.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
